# terra-stac-api

./: CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  logging.conf  logging.yaml  pyproject.toml  setup.py
elasticsearch/: docker-compose.yml
terra_stac_api/: __init__.py  aggregation_client.py  app.py  auth.py  config.py  core.py  db.py  errors.py  serializer.py
terra_stac_api/extensions/: fields.py
tests/: conftest.py  constants.py  mock_auth.py  mock_oidc.py  pre_test.sh  test_aggregation.py  test_auth.py  test_bulk_transactions.py  test_core.py  test_transactions.py
tests/resources/collections/: only_admin.json  protected.json  terrascope_s2_toc_v2.json
tests/resources/collections/extra/: extra_collection.json
tests/resources/items/: S2A_20230220T074941_38SKG_TOC_V210.json  S2A_20230220T074941_38TLK_TOC_V210.json  S2A_20230220T074941_38TLL_TOC_V210.json  S2A_20230220T074941_38TLM_TOC_V210.json  admin1.json  protected1.json  protected2.json
tests/resources/items/extra/: S2A_20230220T093031_36VVR_TOC_V210.json
