[project]
name = "terra-stac-api"
version = "1.2.1"
description = "Terrascope STAC API"
authors = [{name = "Stijn Caerts", email = "stijn.caerts@vito.be"}]
dependencies = [
    "stac-fastapi.opensearch[redis]==6.7.6",
    "python-jose==3.5.0",
    "asgi-logger==0.1.0",
    "PyYAML==6.0.3",
    "jsonpath_ng==1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-env",
    "pytest-asyncio~=0.21.0",
    "asgi-lifespan==2.1.0",
    "httpx==0.27.2",
    "pre-commit",
    "ruff",
    "testcontainers==4.11.0",
    "docker==7.1.0"
]

[tool.setuptools.packages.find]
include = ["terra_stac_api*"]

[tool.pytest_env]
ES_HOST = {value = "0.0.0.0", skip_if_set = true}
ES_PORT = {value = "9200", skip_if_set = true}
ES_USE_SSL = {value = "false", skip_if_set = true}
ES_VERIFY_CERTS = {value= "false", skip_if_set = true}
ROLE_ADMIN = {value = "stac-admin", skip_if_set = true}
ROLE_EDITOR = {value = "stac-editor", skip_if_set = true}
OIDC_ISSUER = {value = "https://example.com"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
